; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_jmp_32_pcdi.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopdm.c_m68k_op_jmp_32_pcdi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_PC = common dso_local global i64 0, align 8
@REG_PPC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_jmp_32_pcdi() #0 {
  %1 = call i32 (...) @EA_PCDI_32()
  %2 = call i32 @m68ki_jump(i32 %1)
  %3 = call i32 (...) @m68ki_trace_t0()
  %4 = load i64, i64* @REG_PC, align 8
  %5 = load i64, i64* @REG_PPC, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 (...) @USE_ALL_CYCLES()
  br label %9

9:                                                ; preds = %7, %0
  ret void
}

declare dso_local i32 @m68ki_jump(i32) #1

declare dso_local i32 @EA_PCDI_32(...) #1

declare dso_local i32 @m68ki_trace_t0(...) #1

declare dso_local i32 @USE_ALL_CYCLES(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
